# CirPath

./: .gitignore  Cargo.toml  README.md
docs/: about.html  app.js  docs.html  index.html  style.css
src/: app.rs  browser.rs  buffer.rs  commands.rs  config.rs  editor.rs  error.rs  i18n.rs  main.rs  menu.rs  status.rs  ui.rs
