[package]
name = "cirpath"
version = "2.0.0"
edition = "2021"
authors = ["CirPath Project"]
description = "CirPath - a VSCode-like terminal text editor built with ratatui"

[[bin]]
name = "cirpath"
path = "src/main.rs"

[dependencies]
# 実務で広く使われている組み合わせ（ratatui 0.28.x <-> crossterm 0.28.x）を固定。
ratatui = { version = "0.28.1", default-features = true }
crossterm = "0.28.1"

[profile.release]
opt-level = 3
lto = true
